@@ -12,7 +12,7 @@ AS=		1a
 ASFLAGS=
 
 CC=		1c
-CFLAGS=		-N -wFV -I$ROOT/Inferno/68000/include -I$ROOT/include
+CFLAGS=		-N -wFV -I$ROOT/Inferno/$OBJTYPE/include -I$ROOT/Inferno/include -I$ROOT/include
 ANSICPP= -p
 
 LD=		1l
